Add: MVP version

--- a/chat-memo-pro/html/popup.html
+++ b/chat-memo-pro/html/popup.html
@@ -251,8 +251,8 @@
     }
     
     .message-user {
-      background: linear-gradient(135deg, #eff6ff 0%, #dbeafe 100%);
-      border: 1px solid #bfdbfe;
+      background-color: #e6f0ff;
+      border: 1px solid transparent;
       border-left: 4px solid #3b82f6;
       margin-bottom: 16px;
       border-radius: 12px;
