Update: 侧边栏实现方式和项目网址
1. 侧边栏从原来 DOM 注入改为Chrome Side Panel API
2. 主界面右上角添加 X，点击插件图标可以在打开/关闭 侧边栏之间切换。
3.更正网址为我的 github chat memo 项目网址。

--- a/chat-memo-pro/html/popup.html
+++ b/chat-memo-pro/html/popup.html
@@ -651,6 +651,11 @@
   <div class="main-container">
     <!-- 数据概览 -->
     <header class="bg-gradient-to-r from-blue-50 to-indigo-50 p-4 border-b relative">
+      <!-- 关闭侧边栏按钮 -->
+      <button id="close-sidebar-btn" class="absolute top-3 right-3 w-8 h-8 flex items-center justify-center text-gray-400 hover:text-gray-600 hover:bg-white/50 rounded-md transition-all duration-200 z-10" title="关闭侧边栏">
+        <i class="fas fa-times text-lg"></i>
+      </button>
+
       <div class="grid grid-cols-2 gap-4">
         <div class="bg-white rounded-lg p-3 shadow-sm">
           <div class="flex items-center justify-between h-full">
@@ -1151,7 +1156,7 @@
           <!-- 新增链接区域 -->
           <div class="pt-1">
             <div class="flex">
-              <a href="https://chatmemo.ai" target="_blank" class="w-full flex items-center justify-center px-3 py-2 bg-lime-50 text-lime-700 rounded-lg hover:bg-gray-50 transition-colors text-sm font-medium border border-lime-200">
+              <a href="https://github.com/anzchy/chat-memo-pro" target="_blank" class="w-full flex items-center justify-center px-3 py-2 bg-lime-50 text-lime-700 rounded-lg hover:bg-gray-50 transition-colors text-sm font-medium border border-lime-200">
                 <i class="fas fa-globe mr-1.5"></i>
                 <span data-i18n="productWebsite">产品官网</span>
               </a>
