--- a/chat-memo-pro/html/popup.html
+++ b/chat-memo-pro/html/popup.html
@@ -1246,6 +1246,9 @@
 
           <!-- Sign Out Section -->
           <div id="sign-out-section" class="hidden border-t pt-4">
+            <div class="text-xs text-gray-600 mb-2">
+              <span data-i18n="loggedInAs">Logged in as</span>: <span id="signed-in-email" class="font-medium"></span>
+            </div>
             <button id="sign-out-btn" class="w-full bg-red-600 text-white px-3 py-2 rounded-lg text-sm hover:bg-red-700">
               <i class="fas fa-sign-out-alt mr-2"></i><span data-i18n="signOut">Sign Out</span>
             </button>
@@ -1282,9 +1285,6 @@
           <!-- Auto-Sync Settings -->
           <div class="border-t pt-4">
             <h4 class="text-sm font-medium text-gray-700 mb-3"><span data-i18n="autoSync">Auto-Sync</span></h4>
-            <button id="auto-sync-now-btn" class="w-full mb-3 bg-blue-600 text-white px-3 py-2 rounded-lg text-sm hover:bg-blue-700">
-              <i class="fas fa-bolt mr-2"></i><span data-i18n="syncNow">Sync Now</span>
-            </button>
             <div class="flex items-center justify-between mb-3">
               <label class="text-sm text-gray-700" data-i18n="enableAutoSync">Enable Auto-Sync</label>
               <label class="toggle-switch">
