--- a/chat-memo-pro/html/popup.html
+++ b/chat-memo-pro/html/popup.html
@@ -1300,6 +1300,7 @@
                 <option value="30">30 minutes</option>
                 <option value="60">1 hour</option>
                 <option value="120">2 hours</option>
+                <option value="1440">24 hours</option>
               </select>
             </div>
           </div>
