--- a/chat-memo-pro/html/popup.html
+++ b/chat-memo-pro/html/popup.html
@@ -1321,6 +1321,18 @@
           <!-- Advanced Settings -->
           <div class="border-t pt-4">
             <h4 class="text-sm font-medium text-gray-700 mb-3"><span data-i18n="advanced">Advanced</span></h4>
+
+            <div class="flex items-center justify-between mb-3">
+              <div class="flex-1 pr-3">
+                <label class="text-sm text-gray-700 font-medium">Prevent Cloud Deletion</label>
+                <p class="text-xs text-gray-500 mt-0.5">Never delete cloud data from this device. Cloud storage will only increase, never decrease.</p>
+              </div>
+              <label class="toggle-switch">
+                <input type="checkbox" id="prevent-cloud-deletion-toggle">
+                <div class="toggle-slider"></div>
+              </label>
+            </div>
+
             <div class="flex items-center justify-between">
               <label class="text-sm text-gray-700" data-i18n="verboseLogging">Verbose Logging</label>
               <label class="toggle-switch">
@@ -1408,6 +1420,44 @@
               <div>
                 <label class="block text-xs text-gray-500 mb-1" data-i18n="endDate">结束日期</label>
                 <input type="date" id="export-end-date" class="w-full text-xs border rounded px-2 py-1">
+              </div>
+            </div>
+
+            <!-- Sync Status Info -->
+            <div id="export-sync-status" class="hidden mt-4 p-3 bg-blue-50 border border-blue-200 rounded-md">
+              <div class="flex items-start justify-between mb-2">
+                <div class="flex-1">
+                  <div class="text-xs font-medium text-gray-700 mb-2">
+                    <i class="fas fa-database mr-1"></i>Data Status
+                  </div>
+                  <div class="grid grid-cols-2 gap-2 text-xs">
+                    <div>
+                      <span class="text-gray-500">Local:</span>
+                      <span id="export-local-count" class="font-medium text-gray-900 ml-1">—</span>
+                    </div>
+                    <div>
+                      <span class="text-gray-500">Cloud:</span>
+                      <span id="export-cloud-count" class="font-medium text-gray-900 ml-1">—</span>
+                    </div>
+                  </div>
+                </div>
+              </div>
+
+              <!-- Warning if cloud has more data -->
+              <div id="export-sync-warning" class="hidden mt-2 p-2 bg-yellow-50 border border-yellow-200 rounded text-xs">
+                <div class="flex items-start">
+                  <i class="fas fa-exclamation-triangle text-yellow-600 mr-2 mt-0.5"></i>
+                  <div class="flex-1">
+                    <p class="text-yellow-800 font-medium mb-1">Cloud has more data</p>
+                    <p class="text-yellow-700 text-[11px] mb-2">Your cloud storage has more conversations. Sync first to export complete data.</p>
+                    <button id="export-sync-then-export" class="px-3 py-1.5 bg-blue-600 hover:bg-blue-700 text-white rounded text-xs font-medium transition-colors">
+                      <i class="fas fa-sync-alt mr-1"></i>Sync then Export
+                    </button>
+                    <button id="export-local-only" class="ml-2 px-3 py-1.5 bg-gray-100 hover:bg-gray-200 text-gray-700 rounded text-xs transition-colors">
+                      Export Local Only
+                    </button>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
